--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -1,5 +1,106 @@
 {% extends "network/layout.html" %}
 
 {% block body %}
-    TODO
+<!--News feed-->
+<div class="feed-container">
+    <div class="feeds-heading">
+        <h3 class="feeds-title">News Feeds</h3>
+    </div>
+    <div class="post-container">
+        <div class="post-header">
+            <div class="poster-container">
+                <div class="poster-img"></div>
+                <div class="poster-name"><h5>UserName</h5></div>
+            </div>
+            <div class="post-time"><small>11:22</small></div>
+        </div>
+
+        <div class="post-body">
+            <p class="post-content">today is a lovely day, is'nt it?</p>
+        </div>
+        <div class="post-footer">
+            <div class="likes">like</div>
+            <div class="comment">comment</div>
+            <div class="share">share</div>
+            <div class="edit">edit</div>
+        </div>
+    </div>
+    <div class="post-container">
+        <div class="post-header">
+            <div class="poster-container">
+                <div class="poster-img"></div>
+                <div class="poster-name"><h5>UserName</h5></div>
+            </div>
+            <div class="post-time"><small>11:22</small></div>
+        </div>
+
+        <div class="post-body">
+            <p class="post-content">today is a lovely day, is'nt it?</p>
+        </div>
+        <div class="post-footer">
+            <div class="likes buttons">like</div>
+            <div class="comment buttons">comment</div>
+            <div class="share buttons">share</div>
+            <div class="edit buttons">edit</div>
+        </div>
+    </div>
+    <div class="post-container">
+        <div class="post-header">
+            <div class="poster-container">
+                <div class="poster-img"></div>
+                <div class="poster-name"><h5>UserName</h5></div>
+            </div>
+            <div class="post-time"><small>11:22</small></div>
+        </div>
+
+        <div class="post-body">
+            <p class="post-content">today is a lovely day, is'nt it?</p>
+        </div>
+        <div class="post-footer">
+            <div class="likes buttons">like</div>
+            <div class="comment buttons">comment</div>
+            <div class="share buttons">share</div>
+            <div class="edit buttons">edit</div>
+        </div>
+    </div>
+    <div class="post-container">
+        <div class="post-header">
+            <div class="poster-container">
+                <div class="poster-img"></div>
+                <div class="poster-name"><h5>UserName</h5></div>
+            </div>
+            <div class="post-time"><small>11:22</small></div>
+        </div>
+
+        <div class="post-body">
+            <p class="post-content">today is a lovely day, is'nt it?</p>
+        </div>
+        <div class="post-footer">
+            <div class="likes buttons">like</div>
+            <div class="comment buttons">comment</div>
+            <div class="share buttons">share</div>
+            <div class="edit buttons">edit</div>
+        </div>
+    </div>
+    <div class="post-container">
+        <div class="post-header">
+            <div class="poster-container">
+                <div class="poster-img"></div>
+                <div class="poster-name"><h5>UserName</h5></div>
+            </div>
+            <div class="post-time"><small>11:22</small></div>
+        </div>
+
+        <div class="post-body">
+            <p class="post-content">today is a lovely day, is'nt it?</p>
+        </div>
+        <div class="post-footer">
+            <div class="likes buttons">like</div>
+            <div class="comment buttons">comment</div>
+            <div class="share buttons">share</div>
+            <div class="edit buttons">edit</div>
+        </div>
+    </div>
+
+</div>
 {% endblock %}
