--- a/network/templates/network/login.html
+++ b/network/templates/network/login.html
@@ -8,16 +8,21 @@
         <div>{{ message }}</div>
     {% endif %}
 
-    <form action="{% url 'login' %}" method="post">
-        {% csrf_token %}
-        <div class="form-group">
-            <input autofocus class="form-control" type="text" name="username" placeholder="Username">
+    <div class="login-container feed-container">
+        <div class="feeds-heading">
+            <h3 class="feeds-title login-title">Login</h3>
         </div>
-        <div class="form-group">
-            <input class="form-control" type="password" name="password" placeholder="Password">
-        </div>
-        <input class="btn btn-primary" type="submit" value="Login">
-    </form>
+        <form action="{% url 'login' %}" method="post" class="login-form">
+            {% csrf_token %}
+            <div class="form-group post-header">
+                <input autofocus class="form-control" type="text" name="username" placeholder="Username">
+            </div>
+            <div class="form-group post-header">
+                <input class="form-control" type="password" name="password" placeholder="Password">
+            </div>
+            <input class="btn btn-primary action" type="submit" value="Login">
+        </form>
+    </div>
 
     Don't have an account? <a href="{% url 'register' %}">Register here.</a>
 
