--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -18,12 +18,14 @@
         <div class="post-body">
             <p class="post-content">today is a lovely day, is'nt it?</p>
         </div>
+        {% if user.is_authenticated %}
         <div class="post-footer">
             <div class="likes">like</div>
             <div class="comment">comment</div>
             <div class="share">share</div>
             <div class="edit">edit</div>
         </div>
+        {% endif %}
     </div>
     <div class="post-container">
         <div class="post-header">
@@ -37,12 +39,14 @@
         <div class="post-body">
             <p class="post-content">today is a lovely day, is'nt it?</p>
         </div>
+        {% if user.is_authenticated %}
         <div class="post-footer">
-            <div class="likes buttons">like</div>
-            <div class="comment buttons">comment</div>
-            <div class="share buttons">share</div>
-            <div class="edit buttons">edit</div>
+            <div class="likes">like</div>
+            <div class="comment">comment</div>
+            <div class="share">share</div>
+            <div class="edit">edit</div>
         </div>
+        {% endif %}
     </div>
     <div class="post-container">
         <div class="post-header">
@@ -56,12 +60,14 @@
         <div class="post-body">
             <p class="post-content">today is a lovely day, is'nt it?</p>
         </div>
+        {% if user.is_authenticated %}
         <div class="post-footer">
-            <div class="likes buttons">like</div>
-            <div class="comment buttons">comment</div>
-            <div class="share buttons">share</div>
-            <div class="edit buttons">edit</div>
+            <div class="likes">like</div>
+            <div class="comment">comment</div>
+            <div class="share">share</div>
+            <div class="edit">edit</div>
         </div>
+        {% endif %}
     </div>
     <div class="post-container">
         <div class="post-header">
@@ -75,12 +81,14 @@
         <div class="post-body">
             <p class="post-content">today is a lovely day, is'nt it?</p>
         </div>
+        {% if user.is_authenticated %}
         <div class="post-footer">
-            <div class="likes buttons">like</div>
-            <div class="comment buttons">comment</div>
-            <div class="share buttons">share</div>
-            <div class="edit buttons">edit</div>
+            <div class="likes">like</div>
+            <div class="comment">comment</div>
+            <div class="share">share</div>
+            <div class="edit">edit</div>
         </div>
+        {% endif %}
     </div>
     <div class="post-container">
         <div class="post-header">
@@ -94,12 +102,14 @@
         <div class="post-body">
             <p class="post-content">today is a lovely day, is'nt it?</p>
         </div>
+        {% if user.is_authenticated %}
         <div class="post-footer">
-            <div class="likes buttons">like</div>
-            <div class="comment buttons">comment</div>
-            <div class="share buttons">share</div>
-            <div class="edit buttons">edit</div>
+            <div class="likes">like</div>
+            <div class="comment">comment</div>
+            <div class="share">share</div>
+            <div class="edit">edit</div>
         </div>
+        {% endif %}
     </div>
 
 </div>
