--- a/network/templates/network/register.html
+++ b/network/templates/network/register.html
@@ -9,21 +9,24 @@
     {% endif %}
 
     <div class="register-container">
+        <div class="feeds-heading">
+            <h3 class="feeds-title login-title">Register</h3>
+        </div>
         <form action="{% url 'register' %}" method="post" class="register-form">
             {% csrf_token %}
-            <div class="form-group">
+            <div class="form-group post-header">
                 <input class="form-control" autofocus type="text" name="username" placeholder="Username">
             </div>
-            <div class="form-group">
+            <div class="form-group post-header">
                 <input class="form-control" type="email" name="email" placeholder="Email Address">
             </div>
-            <div class="form-group">
+            <div class="form-group post-header">
                 <input class="form-control" type="password" name="password" placeholder="Password">
             </div>
-            <div class="form-group">
+            <div class="form-group post-header">
                 <input class="form-control" type="password" name="confirmation" placeholder="Confirm Password">
             </div>
-            <input class="btn btn-primary" type="submit" value="Register">
+            <input class="btn btn-primary action" type="submit" value="Register">
         </form>
     </div>
 
