profile page edited

--- a/network/templates/network/layout.html
+++ b/network/templates/network/layout.html
@@ -50,6 +50,9 @@
                 </div>
             </div>
         </div>
+
+<!--News Feeds-->
+    <div class="feed-container"></div>
         
         <div class="body">
             {% block body %}
