--- a/network/static/network/styles.css
+++ b/network/static/network/styles.css
@@ -3,7 +3,7 @@
   --brand-color: rgb(221, 107, 0);
   --border-color: 1px solid rgb(221, 107, 0);
   --box-shadow: 0 2px 3.5px -1px rgba(221, 107, 0, 0.4);
-  --box-shadow-hover: 0 -2px 10px -1px rgba(221, 107, 0, 0.4);
+  --box-shadow-hover: 0 -2px 10px -1px rgba(201, 201, 201, 0.4);
   --background-color: rgb(10, 10, 10);
   --background-color-lite: rgb(15, 15, 15);
   --background-color-selected: rgb(24, 24, 24); 
@@ -91,7 +91,7 @@ body{
   margin-top: 5px;
 }
 .nav-item:hover{
-  border-bottom:  2px solid rgb(221, 107, 0);
+  border-bottom:  2px solid rgb(201, 201, 201);
   box-shadow: var(--box-shadow-hover);
   color: rgb(221, 107, 0);
   text-decoration: none;
@@ -127,7 +127,7 @@ body{
 
 .post-container, .login-form, .register-form, .user-details{
   position: relative;
-  width: 695px;
+  width: 690px;
   height: auto;
   margin-top: 5px;
   margin-bottom: 5px;
@@ -136,7 +136,7 @@ body{
   align-items: center;
   flex-direction: column;
   box-shadow: var(--box-shadow);
-  border-radius: 5px;
+  
   transition: background-color 0.5s ease, box-shadow 0.3s ease, border-bottom 0.8s ease;
 }
 .post-container:hover{
@@ -277,9 +277,8 @@ body{
 }
 
 .action:hover{
-  border-bottom:  2px solid rgb(221, 107, 0);
+  border-bottom:  2px solid rgb(201, 201, 201);
   box-shadow: var(--box-shadow-hover);
-  color: rgb(221, 107, 0);
   text-decoration: none;
 }
 
@@ -312,13 +311,21 @@ body{
 
 
 /*Profile page*/
+.profile-container{
+  margin-top: 265px;
+}
 .user-info{
-  position: relative;
+  position: fixed;
+  top: 50px;
+  left: 309px;
   height: 250px;
   width: 698px;
   display: flex;
+  margin: 10px 0 ; 
   flex-direction: row;
-  border: var(--border-color);
+  background-color: var(--background-color);
+  box-shadow: var(--box-shadow);
+  z-index: 1;
 }
 
 .personal, .acc-details{
@@ -329,4 +336,21 @@ body{
   align-items: center;
   justify-content: center;
   flex-direction: column;
+}
+
+.followers-div, .following-div, .follow{
+  width: 95%;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(53, 53, 53);
+  border-radius: 10px;
+  margin-top: 5px;
+  border: var(--text-color);
+}
+
+.follow{
+  width: 95%;
+  background-color: var(--background-color);
 }
