--- a/network/templates/network/profile.html
+++ b/network/templates/network/profile.html
@@ -8,12 +8,12 @@
   </div>
   <div class="user-info">
     <div class="personal">
-      <div class="user-img"></div>
+      <div class="user-img "></div>
       <div class="user-name"><strong>{{ user.username }}</strong></div>   
     </div>
 
     <div class="acc-details">
-      <div class="f0llowers-div">
+      <div class="followers-div">
         <h4>Follower</h4>
       </div>
       <div class="following-div">
@@ -24,6 +24,50 @@
       </div>
     </div>
   </div>
+
+  <div class="post-container">
+    <div class="post-header">
+        <div class="poster-container">
+            <div class="poster-img"></div>
+            <div class="poster-name"><h5>UserName</h5></div>
+        </div>
+        <div class="post-time"><small>11:22</small></div>
+    </div>
+
+    <div class="post-body">
+        <p class="post-content">today is a lovely day, is'nt it?</p>
+    </div>
+    {% if user.is_authenticated %}
+    <div class="post-footer">
+        <div class="likes">like</div>
+        <div class="comment">comment</div>
+        <div class="share">share</div>
+        <div class="edit">edit</div>
+    </div>
+    {% endif %}
+  </div>
+  <div class="post-container">
+    <div class="post-header">
+        <div class="poster-container">
+            <div class="poster-img"></div>
+            <div class="poster-name"><h5>UserName</h5></div>
+        </div>
+        <div class="post-time"><small>11:22</small></div>
+    </div>
+
+    <div class="post-body">
+        <p class="post-content">today is a lovely day, is'nt it?</p>
+    </div>
+    {% if user.is_authenticated %}
+    <div class="post-footer">
+        <div class="likes">like</div>
+        <div class="comment">comment</div>
+        <div class="share">share</div>
+        <div class="edit">edit</div>
+    </div>
+    {% endif %}
+  </div>
+
 
 </div>
 
