--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -6,6 +6,15 @@
     <div class="feeds-heading">
         <h3 class="feeds-title">News Feeds</h3>
     </div>
+
+    <form action="" method="post" class="new-post-container">
+        <input type="text" name="post-content" id="" class="post-text form-control">
+        <div class="post-actions">
+            <input type="button" value="cancel" id="cancel-post" class="post-action btn-primary action">
+            <input type="submit" value="Post" class="post-action btn-primary action">
+        </div>
+    </form>
+  
     <div class="post-container">
         <div class="post-header">
             <div class="poster-container">
@@ -113,4 +122,5 @@
     </div>
 
 </div>
+
 {% endblock %}
