--- a/network/templates/network/layout.html
+++ b/network/templates/network/layout.html
@@ -6,6 +6,8 @@
         <title>{% block title %}Social Network{% endblock %}</title>
         <!--<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> -->
         <link href="{% static 'network/styles.css' %}" rel="stylesheet">
+        <script src="{% static 'network/script.js' %}"></script>
+
     </head>
     <body>
 <!--Navigation panel-->
@@ -40,7 +42,7 @@
                 {% endif %}
                 <div class="user-actions">
                     {% if user.is_authenticated %}
-                        <a class="action nav-item" href="">Post</a>
+                        <a class="action nav-item" id="write-post" href="">Post</a>
                         <a href="{% url 'profile' %}" class="action nav-item">Profile</a>
                         <a class="action nav-item" href="{% url 'logout' %}">Log Out</a>
                     {% else %}
