--- a/network/templates/network/profile.html
+++ b/network/templates/network/profile.html
@@ -25,50 +25,27 @@
     </div>
   </div>
 
+  {% for post in userPosts %}
   <div class="post-container">
-    <div class="post-header">
-        <div class="poster-container">
-            <div class="poster-img"></div>
-            <div class="poster-name"><h5>UserName</h5></div>
-        </div>
-        <div class="post-time"><small>11:22</small></div>
-    </div>
+      <div class="post-header">
+          <div class="poster-container">
+              <div class="poster-img"></div>
+              <div class="poster-name"><h5>{{post.poster}}</h5></div>
+          </div>
+          <div class="post-time"><small>{{post.timestamp}}</small></div>
+      </div>
 
-    <div class="post-body">
-        <p class="post-content">today is a lovely day, is'nt it?</p>
-    </div>
-    {% if user.is_authenticated %}
-    <div class="post-footer">
-        <div class="likes">like</div>
-        <div class="comment">comment</div>
-        <div class="share">share</div>
-        <div class="edit">edit</div>
-    </div>
-    {% endif %}
+      <div class="post-body">
+          <p class="post-content">{{post.content}}</p>
+      </div>
+      {% if user.username != post.poster %}
+      <div class="post-footer">
+          <div class="likes">like</div>
+          <div class="comment">comment</div>
+          <div class="share">share</div>
+          <div class="edit">edit</div>
+      </div>
+      {% endif %}
   </div>
-  <div class="post-container">
-    <div class="post-header">
-        <div class="poster-container">
-            <div class="poster-img"></div>
-            <div class="poster-name"><h5>UserName</h5></div>
-        </div>
-        <div class="post-time"><small>11:22</small></div>
-    </div>
-
-    <div class="post-body">
-        <p class="post-content">today is a lovely day, is'nt it?</p>
-    </div>
-    {% if user.is_authenticated %}
-    <div class="post-footer">
-        <div class="likes">like</div>
-        <div class="comment">comment</div>
-        <div class="share">share</div>
-        <div class="edit">edit</div>
-    </div>
-    {% endif %}
-  </div>
-
-
-</div>
-
+{% endfor %}
 {% endblock %}
