--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -29,7 +29,7 @@
             </div>
             {% if user.is_authenticated %}
             <div class="post-footer">
-                <div class="likes">like</div>
+                <div class="likes like-button">like</div>
                 <div class="comment">comment</div>
                 <div class="share">share</div>
                 <div class="edit">edit</div>
