--- a/network/static/network/styles.css
+++ b/network/static/network/styles.css
@@ -146,24 +146,52 @@ body{
   background-color: rgb(20, 20, 20);
 }
 
-.post-header, .post-body, .post-footer{
+.post-header, .post-body, .post-footer, .edit-footer{
   position: relative;
   width: 98%;
   height: 50px;
   
 }
-.post-header, .post-footer{
+.post-header, .post-footer, .edit-footer{
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
-.post-body{
-  min-height: 45px;
-  max-height: auto;
+.post-header{
+  top: 0;
+  height: 2em;
 }
-.post-footer{
+.post-footer, .edit-footer{
+  bottom: 0;
+  height: 2em;
+}
+.post-body{
+  top: 10%;
+  width: 96%;
+  min-height: 7em;
+  max-height: auto;
+
+}
+.post-content, .edit-text, textarea{
+  position: absolute;
+  width: 100%;
+  height: auto;
+  display: block;
+  opacity: 1;
+}
+textarea{
+  opacity: 0;
+}
+
+.post-footer, .edit-footer{
+  position: absolute;
   height: 35px;
   width: 35%;
+  bottom: 0
+}
+.edit-footer{
+  opacity: 0;
+  z-index: 0;
 }
 
 .poster-container{
@@ -192,7 +220,7 @@ body{
   justify-content: center;  
 }
 
-.likes, .comment, .share, .edit{
+.likes, .comment, .share, .edit, .edit-buttons{
   height: 30px;
   width: 60px;
   display: flex;
@@ -202,11 +230,17 @@ body{
   box-shadow: var(--box-shadow);
   border-radius: 5px;
 }
+.edit-buttons{
+  width: 7em;
+  color: white;
+  background-color: var(--background-color);
+}
 .buttons:hover{
   border-bottom:  2px solid rgb(221, 107, 0);
   box-shadow: var(--box-shadow-hover);
   color: rgb(221, 107, 0);
   text-decoration: none;
+  cursor: pointer;
 }
 
 
